# E-Commerce-Clickstream-Inventory-Watch

./: .coverage  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.spark  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
airflow/: Dockerfile
airflow/config/: airflow.cfg
airflow/dags/: dag.py  daily_batch_python.py  daily_clickstream_batch_dag.py  daily_user_segmentation_pipeline.py  new_dag.py  spark_user_segmentation.py
batch/: __init__.py  daily_batch_processing.py  report_utils.py  spark_daily_batch_job.py
config/: airflow.cfg  spark-defaults.conf
connectors/: minio-sink.json
consumers/: simple_consumer.py
producers/: __init__.py  clickstream_producer.py  clickstream_simulator.py  test.py
schemas/: __init__.py  event_schema.py  product_catalog.py
serving/: batch_to_clickhouse.py  clickhouse_init.sql  dashboard.html  dashboard_api.py  kafka_to_clickhouse.py
spark/: Dockerfile
stream_layer/: spark_raw_sink.py  spark_stream_processor.py  test.py
streaming/src/: alert_logic.py  metrics.py  processor.py
tests/: __init__.py  test_clickstream_simulator.py  test_report_utils.py
validation/: event_validator.py
