[project]
name = "e-commerce-clickstream-inventory-watch"
version = "0.1.0"
description = "Minimal lambda-architecture clickstream pipeline with Kafka, Spark, Airflow, Delta Lake, and MinIO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==3.2.1",
    "delta-spark==4.0.0",
    "kafka-python==2.2.15",
    "pyspark[sql]==4.1.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
]
