[project]
name = "e-commerce-clickstream-inventory-watch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-apache-spark>=6.0.1",
    "boto>=2.49.0",
    "boto3>=1.43.6",
    "kafka>=1.3.5",
    "kafka-python>=2.3.1",
    "minio>=7.2.20",
    "pyspark[connect,sql]>=4.1.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
]
